--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,7 @@
-<router-outlet />
+<!-- <div class="custom-cursor" id="cursor"></div> -->
+<app-header></app-header>
+<main class="min-h-[70vh]">
+    <router-outlet />
+</main>
+<!-- <app-footer></app-footer>
+<app-chatbot></app-chatbot> -->
