feat: add footer and header components with responsive design

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,5 @@
 <main class="min-h-[70vh]">
     <router-outlet />
 </main>
-<!-- <app-footer></app-footer>
-<app-chatbot></app-chatbot> -->
+<app-footer></app-footer>
+<!-- <app-chatbot></app-chatbot> -->
