feat: add contact page with quotes and styling

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,7 +1,6 @@
 <div class="bg-white flex items-center justify-center overflow-hidden">
-    <div class="absolute inset-0 w-full h-full bg-cover bg-center opacity-20"
-        style="background-image: url('assets/images/bg2.jpg'); "> </div>
-    <div class="container mx-auto flex flex-col lg:flex-row items-center  transition-all duration-700 ease-in-out">
+    <div class="absolute inset-0 w-full h-full bg-cover bg-center opacity-20  bg-[url('assets/images/bg2.jpg')]"> </div>
+    <div class=" container mx-auto flex flex-col lg:flex-row items-center transition-all duration-700 ease-in-out">
         <div
             class="flex-1 text-center lg:text-left transform transition-all duration-700 ease-in-out px-4 ms-2 md:ms-12 md:px-12 space-y-8">
             <p class="font-semibold text-lg lg:text-xl md:text-base text-red-500 tracking-wide">
