--- a/src/app/components/pages/service/service.html
+++ b/src/app/components/pages/service/service.html
@@ -29,7 +29,7 @@
                     </div>
                     <div
                         class="relative z-10 flex flex-col items-center justify-center text-center p-8 transition-all duration-500 group-hover:opacity-0">
-                        <!-- <div class="w-16 h-16 flex items-center justify-center rounded-full mb-4 shadow-md"
+                        <div class="w-16 h-16 flex items-center justify-center rounded-full mb-4 shadow-md"
                             [ngClass]="f.iconBg">
                             <svg class="w-8 h-8" fill="none" stroke="currentColor" [ngClass]="f.iconColor"
                                 viewBox="0 0 24 24">
@@ -38,7 +38,7 @@
                                 <path *ngIf="f.innerIcon" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" [attr.d]="f.innerIcon" />
                             </svg>
-                        </div> -->
+                        </div>
                         <h3 class="text-lg font-semibold text-white">{{ f.title }}</h3>
                     </div>
 
@@ -56,14 +56,14 @@
 <div class="py-16">
     <div class="max-w-7xl mx-auto px-4">
         <!-- Section Heading -->
-        <div class="mb-12 text-center max-w-2xl mx-auto">
+        <!-- <div class="mb-12 text-center max-w-2xl mx-auto">
             <h2 class="text-3xl md:text-4xl font-bold mb-4 text-red-500" data-aos="zoom-in">Our Services</h2>
             <p class="text-gray-600" data-aos="zoom-in">
                 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                 there live the blind texts. Separated they live in Bookmarksgrove right at the coast of
                 the Semantics, a large language ocean.
             </p>
-        </div>
+        </div> -->
 
         <!-- Grid -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 items-stretch">
