feat: integrate amCharts 5 for inbound map visualization

--- a/src/app/components/inbound/inbound.html
+++ b/src/app/components/inbound/inbound.html
@@ -11,8 +11,6 @@
             explore diverse landscapes and cultures.
         </p>
 
-        <!-- <app-inbound-map></app-inbound-map> -->
-
         <!-- Quick Access Regions -->
         <div class="bg-white  p-8 lg:px-[9rem] md:px-[6rem]">
             <h2 class="text-2xl font-bold text-red-500 mb-6 text-center">
@@ -43,5 +41,6 @@
             </div>
         </div>
 
+        <app-inbound-map></app-inbound-map>
     </div>
 </div>
