--- a/src/app/components/inbound/inbound-package/inbound-package.html
+++ b/src/app/components/inbound/inbound-package/inbound-package.html
@@ -82,7 +82,7 @@
                             <ng-container [ngSwitch]="section.id">
                                 <!-- <app-inbound-overview *ngSwitchCase="'overview'"
                                     [stateHighlights]="stateHighlights"></app-inbound-overview> -->
-                                <!-- 
+
                                 <app-inbound-itinerary *ngSwitchCase="'overview'"
                                     [detailedItinerary]="packageData?.detailedItinerary"></app-inbound-itinerary>
 
@@ -98,7 +98,7 @@
                                 </app-inbound-summary>
 
                                 <app-inbound-pricing *ngSwitchCase="'pricing'" [pricing]="packageData?.pricing">
-                                </app-inbound-pricing> -->
+                                </app-inbound-pricing>
 
                             </ng-container>
                         </div>
