--- a/src/app/components/inbound/inbound-package/inbound-package.html
+++ b/src/app/components/inbound/inbound-package/inbound-package.html
@@ -107,7 +107,7 @@
             </div>
         </section>
 
-        <!-- <app-booking-form></app-booking-form> -->
+        <app-booking></app-booking>
         <!-- Best Time to Visit -->
         <section class="bg-red-500 rounded-2xl shadow-xl p-4 my-12 text-white">
             <!-- <h2 class="text-2xl font-bold text-gray-100 mb-6">Best Time to Visit {{ stateName }}</h2> -->
