--- a/src/app/components/pages/quotes/quotes.html
+++ b/src/app/components/pages/quotes/quotes.html
@@ -1,21 +1,21 @@
 <!-- quote-section.component.html -->
 <section class="relative bg-gradient-to-br from-gray-50 to-white p-3 md:px-12 overflow-hidden" data-aos="fade-up">
     <div
-        class="absolute inset-0 opacity-20 bg-[url('assets/images/banner5.jpg')] bg-cover bg-center pointer-events-none">
+        class="absolute inset-0 opacity-80 bg-[url('assets/images/banner3.jpg')] bg-cover bg-center pointer-events-none">
     </div>
 
     <div class="max-w-4xl mx-auto relative z-10 text-center">
-        <div class="font-semibold text-red-500 text-lg font-serif">{{quote.title}}</div>
+        <div class="font-semibold text-white text-lg font-serif">{{quote.title}}</div>
         <div class="inline-block mb-2">
             <span class="inline-block w-16 h-[2px] bg-gradient-to-r from-yellow-400 to-yellow-600 rounded-full"></span>
         </div>
 
-        <h2 class="text-xl md:text-xl font-serif text-gray-800 mb-6 leading-relaxed italic">
+        <h2 class="text-xl md:text-xl font-serif text-white mb-6 leading-relaxed italic">
             "{{ quote.text }}"
         </h2>
 
-        <p class="text-gray-600 font-light text-sm md:text-base">
-            – Inspired by <span class="font-semibold text-yellow-600"> {{quote.inspiredBy}}</span>
+        <p class="text-gray-50 font-light text-sm md:text-base">
+            – Inspired by <span class="font-semibold text-red-50"> {{quote.inspiredBy}}</span>
         </p>
     </div>
 </section>
