--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -4,7 +4,7 @@
         <div
             class="flex-1 text-center lg:text-left transform transition-all duration-700 ease-in-out px-4 ms-2 md:ms-12 md:px-12 space-y-8">
             <p class="font-semibold text-lg lg:text-xl md:text-base text-red-500 tracking-wide">
-                <!-- <om-typewriter [words]="[' Simply no better!']"></om-typewriter> -->
+                <om-typewriter [words]="[' Simply no better!']"></om-typewriter>
             <h1 class="font-serif text-xl sm:text-xl md:text-2xl lg:text-3xl px-6 py-3 w-fit md:w-3/4
                        font-bold text-white bg-red-500 leading-tight rounded-lg shadow-lg">
                 <span class="inline-block animate-float">End of your Tour Search starts from here...</span>
