--- a/src/app/components/pages/header/header.html
+++ b/src/app/components/pages/header/header.html
@@ -9,11 +9,11 @@
             </div>
             <div class="flex flex-col leading-tight">
                 <span
-                    class="text-2xl md:text-3xl font-bold bg-gradient-to-r from-red-600 to-red-500 bg-clip-text text-transparent tracking-wide">
-                    IDT WORLD
+                    class="text-xl md:text-2xl font-bold bg-gradient-to-r from-red-600 to-red-500 bg-clip-text text-transparent tracking-wide">
+                    IDT WORLD OF TRAVEL
                 </span>
                 <span class="text-xs md:text-sm text-gray-700 italic">
-                    From the House of India Destination Tours
+                    Passionately Curated, Authentically Crafted
                 </span>
             </div>
         </a>
