--- a/src/app/components/inbound/inbound-package/inbound-itinerary/inbound-itinerary.html
+++ b/src/app/components/inbound/inbound-package/inbound-itinerary/inbound-itinerary.html
@@ -1,5 +1,5 @@
 <section data-animate="detailed-itinerary"
-    class="relative bg-gradient-to-b from-white via-red-50 to-white rounded-2xl shadow-2xl p-8 overflow-hidden">
+    class="relative bg-gradient-to-b from-white via-red-50 to-white rounded-2xl shadow-2xl p-4 overflow-hidden">
 
     <!-- <h2 class="text-3xl font-bold text-gray-900 mb-12 flex items-center items-center gap-3">
         <span class="bg-red-100 p-4 rounded-full shadow-md">🗺️</span>
@@ -20,8 +20,9 @@
             </div>
 
             <!-- Card -->
-            <div class="ml-20 w-full bg-white/80 backdrop-blur-lg border border-red-100 shadow-md rounded-2xl p-6 
-                  hover:shadow-xl hover:scale-[1.02] transition-all duration-300">
+            <div class="ml-20 w-full backdrop-blur-lg border border-red-100 shadow-md rounded-2xl p-4 w-full
+                  hover:shadow-xl hover:scale-[1.02] transition-all duration-300 bg-center bg-cover" style="
+                background-image: url('/assets/images/redBg3.jpg');">
 
                 <!-- Day Title -->
                 <h3 class="text-xl font-semibold text-red-600 mb-2"> {{ day.day }} – {{ day.title }} </h3>
