--- a/src/app/components/inbound/inbound.html
+++ b/src/app/components/inbound/inbound.html
@@ -1,23 +1,23 @@
 <app-quotes [quote]="quotes"></app-quotes>
 <div class="min-h-screen bg-gray-50/30 mt-12">
     <div class="relative text-center">
-        <h1 class="text-2xl md:text-4xl font-bold font-serif my-4 rounded-2xl py-3 border border-red-500 inline-block">
-            <span class="text-white bg-red-500 p-3 rounded-l-2xl">Inbound</span>
-            <span class="text-red-500 ms-2 p-3">Travel Packages</span>
-        </h1>
-        <p class="text-lg md:text-lg text-gray-700 max-w-5xl mx-auto leading-relaxed text-justify py-10 md:p-0 mb-5">
-            Discover the beauty of India with our carefully curated domestic travel packages.
-            From the snow-capped Himalayas to the pristine beaches of the south,
-            explore diverse landscapes and cultures.
-        </p>
+        <div class="bg-white p-8 lg:px-[9rem] md:px-[6rem] rounded-xl shadow-sm bg-cover bd-center mb-4"
+            style="background-image: url('/assets/images/banner3.jpg'); ">
+            <h1
+                class="text-2xl md:text-4xl font-bold font-serif my-4 rounded-2xl py-3 border border-red-500 inline-block">
+                <span class="text-white bg-red-500 p-3 rounded-l-2xl">Inbound</span>
+                <span class="text-red-500 ms-2 p-3">Travel Packages</span>
+            </h1>
+            <p
+                class="text-lg md:text-lg text-gray-700 max-w-5xl mx-auto leading-relaxed text-justify py-10 md:p-0 mb-5">
+                Discover the beauty of India with our carefully curated domestic travel packages.
+                From the snow-capped Himalayas to the pristine beaches of the south,
+                explore diverse landscapes and cultures.
+            </p>
 
-
-
-        <!-- Quick Access Regions -->
-        <div class="bg-white p-8 lg:px-[9rem] md:px-[6rem] rounded-xl shadow-sm">
             <div class="grid grid-cols-3 items-center mb-8">
                 <div></div>
-                <h2 class="text-2xl font-bold text-red-500 text-center col-span-1">
+                <h2 class="text-2xl font-bold font-serif text-red-500 text-center col-span-1">
                     Popular Inbound Packages
                 </h2>
                 <div class="flex justify-end">
@@ -31,8 +31,8 @@
             </div>
 
             <!-- 🧳 Filtered List -->
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div *ngFor="let state of filteredPackages" class="group cursor-pointer"
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 p-6 rounded-xl">
+                <div *ngFor=" let state of filteredPackages" class="group cursor-pointer"
                     (click)="navigateToState(state.id)">
                     <div class="rounded-xl p-6 text-white hover:shadow-lg transition-all duration-300 ease-in-out relative overflow-hidden"
                         [ngClass]="state.gradient ? 'bg-gradient-to-br ' + state.gradient : ''" [ngStyle]="
