--- a/src/app/components/pages/quotes/quotes.html
+++ b/src/app/components/pages/quotes/quotes.html
@@ -1,7 +1,7 @@
 <!-- quote-section.component.html -->
 <section class="relative bg-gradient-to-br from-gray-50 to-white p-3 md:px-12 overflow-hidden" data-aos="fade-up">
     <div
-        class="absolute inset-0 opacity-80 bg-[url('assets/images/banner3.jpg')] bg-cover bg-center pointer-events-none">
+        class="absolute inset-0 opacity-80 bg-[url('assets/images/banner3.png')] bg-cover bg-center pointer-events-none">
     </div>
 
     <div class="max-w-4xl mx-auto relative z-10 text-center">
