--- a/src/app/components/inbound/inbound-package/inbound-hotels/inbound-hotels.html
+++ b/src/app/components/inbound/inbound-package/inbound-hotels/inbound-hotels.html
@@ -1,4 +1,4 @@
-<section class="bg-white rounded-2xl shadow-xl p-6 space-y-3">
+<section class="bg-[url(assets/images/whitebg3.jpg)] bg-cover rounded-2xl shadow-xl p-6 space-y-3">
     <section data-animate="hotels">
         <div class="py-6">
             <h2 class="text-xl md:text-2xl font-bold mb-2 text-red-500">
