--- a/src/app/components/inbound/inbound-package/inbound-package.html
+++ b/src/app/components/inbound/inbound-package/inbound-package.html
@@ -32,7 +32,7 @@
 
     <!-- Apart Section -->
     <section
-        class="max-w-7xl mx-auto  rounded-2xl bg-white p-4 shadow-xl border-2 border-red-500 mb-6 text-center bg-[url('assets/images/whitebg.jpg')] bg-cover bg-center">
+        class="max-w-7xl mx-auto  rounded-2xl bg-white p-4 shadow-xl border-1 border-red-500 mb-6 text-center bg-[url('assets/images/whitebg1.jpg')] bg-cover bg-center">
         <h2 class="text-xl md:text-2xl font-bold text-gray-900 mb-8 relative inline-block" data-aos="fade-up">
             <span class="text-red-500"> What Sets Your Tour Apart? </span>
             <div class="absolute left-1/2 -bottom-2 w-24 h-1 bg-red-500 rounded-full -translate-x-1/2"></div>
@@ -121,10 +121,10 @@
             <div class="relative z-10 flex flex-col md:flex-row items-center justify-between gap-6 max-w-6xl mx-auto">
                 <!-- Left Text -->
                 <div class="text-left md:text-center md:flex-1">
-                    <h2 class="text-3xl font-bold tracking-wide">
+                    <h2 class="text-2xl font-bold tracking-wide">
                         Need Help Before Booking?
                     </h2>
-                    <p class="mt-3 text-lg text-red-500/90">
+                    <p class="mt-3 text-md text-red-500/90">
                         Our virtual assistant is here 24/7 to answer your travel questions instantly.
                     </p>
                 </div>
