--- a/src/app/components/pages/chatbot/chatbot.html
+++ b/src/app/components/pages/chatbot/chatbot.html
@@ -9,8 +9,8 @@
     <div
         class="bg-gradient-to-r from-red-600 to-pink-600 text-white p-4 font-semibold flex justify-between items-center">
         <div class="flex items-center gap-3">
-            <img src="https://i.pravatar.cc/100?img=47" alt="DoraGO" class="w-8 h-8 rounded-full border border-white">
-            <span>DoraGo - Virtual Assistant</span>
+            <img src="https://i.pravatar.cc/100?img=47" alt="ZaraGo" class="w-8 h-8 rounded-full border border-white">
+            <span>ZaraGo - Virtual Assistant</span>
         </div>
         <button (click)="openChat()" class="text-white hover:text-gray-200 transition">
             <i class="pi pi-times text-lg"></i>
@@ -19,7 +19,7 @@
     <div class="p-4 space-y-4 max-h-96 overflow-y-auto bg-gray-50">
         <div *ngIf="!userName" class="flex flex-col gap-3">
             <div class="bg-red-100 text-gray-800 rounded-xl p-3 w-fit max-w-[90%]">
-                Hi 👋 I'm <b>DoraGO</b>, your travel assistant!
+                Hi 👋 I'm <b>ZaraGo</b>, your travel assistant!
                 What’s your <b>name</b>?
             </div>
             <input [(ngModel)]="userName" type="text" placeholder="Enter your name"
@@ -54,7 +54,7 @@
             </div>
 
             <div *ngIf="currentStep.options.length === 0" class="text-sm text-gray-500">
-                Thank you, {{ userName }}! DoraGO will get back to you soon 🌸
+                Thank you, {{ userName }}! ZaraGo will get back to you soon 🌸
             </div>
         </div>
     </div>
