--- a/src/app/components/pages/service/service.html
+++ b/src/app/components/pages/service/service.html
@@ -5,8 +5,7 @@
         <div class="absolute inset-0 bg-black/70"></div>
 
         <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
-            <!-- Section header -->
-            <div class="text-center mb-16">
+            <div class="text-center mb-16" data-aos="fade-in">
                 <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">
                     What Sets
                     <span
@@ -49,7 +48,6 @@
 
 <div class="py-16">
     <div class="max-w-7xl mx-auto px-4">
-        <!-- Section Heading -->
         <!-- <div class="mb-12 text-center max-w-2xl mx-auto">
             <h2 class="text-3xl md:text-4xl font-bold mb-4 text-red-500" data-aos="zoom-in">Our Services</h2>
             <p class="text-gray-600" data-aos="zoom-in">
